<resources>
    <string name="app_name">Fichaje</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_clear_data">Borrar datos</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Bienvenido %1$s!"</string>
    <string name="invalid_username">Usuario erróneo</string>
    <string name="invalid_password">Password erróneo</string>
    <string name="login_failed">"Fallo en el login</string>
    <string name="enter_ok">"Entrada registrada correctamente</string>
    <string name="exit_ok">"Salida registrada correctamente</string>
    <string name="enter_fail">"Fallo al registrar la entrada"</string>
    <string name="exit_fail">Fallo al registrar la salida</string>
    <string name="calendar">Calendario</string>
    <string name="hours">Horario</string>
    <string name="login_fragment_title">Login</string>
    <string name="buttons_fragment_title">Ficha</string>
    <string name="options_menu_title">Opciones</string>
    <string name="channel_name">Fichaje</string>
    <string name="channel_description">Canal para las notificaciones de fichaje</string>
    <string name="check_alarm_disabled">Activar alarma</string>
    <string name="check_alarm_enabled">Desactivar alarma</string>
    <string name="notification_text">La %1$s se ha registrado %2$s</string>
    <string name="notification_enter_text">entrada</string>
    <string name="notification_exit_text">salida</string>
    <string name="notification_ok_text">correctamente</string>
    <string name="notification_ko_text">erróneamente</string>
    <string name="notification_retry_text">Reintentar</string>
    <string name="notification_title_text">Fichaje</string>
    <string name="one_day_selection">Seleccionar un día</string>
    <string name="one_day_selection_title_text">Selecciona un día</string>
    <string name="range_selection">Seleccionar un rango</string>
    <string name="range_selection_title_text">Selecciona un rango de fechas</string>
    <string name="edit_fav_button_description">Edit button</string>
    <string name="calendar_fragment_title">Días de vacaciones</string>
    <string name="days_text">días</string>
    <string name="holidays_deleted_text">Vacaciones borradas</string>
    <string name="alarm_init_hour_info_text">Selecciona a qué hora quieres que se inicie la alarma</string>
    <string name="alarm_end_hour_info_text">Selecciona a qué hora quieres que se fiche la salida (Sólo de lunes a jueves)</string>
    <string name="alarm_set_hour_button_text">Fijar hora</string>
    <string name="entry_button_text">Entrada</string>
    <string name="exit_button_text">Salida</string>
    <string name="holidays_item_deleted">Registro borrado</string>
    <string name="holidays_item_duplicated">Ya se ha registrado previamente ese día</string>
    <string name="holidays_item_undone">Deshacer</string>
</resources>