<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.hour.HourFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/informAlarmEntryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_init_hour_info_text"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/alarmEntryPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/informAlarmEntryText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hourEntryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/alarm_set_hour_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarmEntryPicker" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/informAlarmExitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_end_hour_info_text"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/hourEntryButton" />

    <TimePicker
        android:id="@+id/alarmExitPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/informAlarmExitText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hourExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/alarm_set_hour_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarmExitPicker" />

</androidx.constraintlayout.widget.ConstraintLayout>