<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageSalida"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/entrada" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/entry_button_text"
        app:layout_constraintLeft_toLeftOf="@id/imageEntrada"
        app:layout_constraintRight_toRightOf="@id/imageEntrada"
        app:layout_constraintTop_toBottomOf="@id/imageEntrada" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imageEntrada"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/salida" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/exit_button_text"
        app:layout_constraintLeft_toLeftOf="@id/imageSalida"
        app:layout_constraintRight_toRightOf="@id/imageSalida"
        app:layout_constraintTop_toBottomOf="@id/imageSalida" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/alarmSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/check_alarm_disabled"
        app:layout_constraintLeft_toLeftOf="@id/textEntrada"
        app:layout_constraintRight_toRightOf="@id/textSalida"
        app:layout_constraintTop_toBottomOf="@id/textEntrada"
        app:switchPadding="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>